--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Remmy Textile - Elivating Fashion, Enriching Lives!</title>
+  <title>Remmy Textiles - Elivating Fashion, Enriching Lives!</title>
   <meta
     content="Established in 2019, Remmy Textiles is a third-generation family-based company. We are an emerging manufacturer and exporter of knitted garments with an integrated factory producing over 12 million pcs/year. Our core competency lies in understanding our customers' buying preferences and delivering consistent, high-quality products that meet international compliance standards. With a keen eye on the latest fashion trends, we are committed to providing exceptional products that exceed our customers' expectations."
     name="description">
@@ -167,9 +167,14 @@
                   </div>
 
                   <p>
-                    State-of-the-art spinning mill with 18,000 spindles. Producing 4200 metric tons of cotton yarn
-                    annually (10s to 40s counts). Highly automated systems ensure top-quality yarn meeting high
-                    standards. Advanced contamination control.
+                    Unveiling a state-of-the-art spinning mill housing 18,000 meticulously calibrated spindles, driving
+                    an annual production of 4200 metric tons of cotton yarn spanning counts from 10s to 40s. Seamlessly
+                    integrating automation and precision, our facility ensures optimal efficiency while maintaining
+                    uncompromising quality standards, delivering flawlessly spun yarn from raw cotton fibers. Powered by
+                    cutting-edge contamination control technology, our commitment to excellence extends to
+                    sustainability, guaranteeing pristine yarn output. As pioneers of innovation in the textile sector,
+                    we invite you to join us in reshaping the landscape of cotton yarn production through our relentless
+                    pursuit of superior craftsmanship and advancement.
                   </p>
                 </div>
               </li>
@@ -183,9 +188,14 @@
                     <img src="assets/img/infra/knitting-division.jpg" class="img-fluid" alt="Knitting Division">
                   </div>
                   <p>
-                    Our facility produces single, spandex, double jersey, and fleece grey fabrics. Capacity: 2500 metric
-                    tons/year. Ensuring high-quality output, we collaborate with long-standing partners for track
-                    designs, feeder stripes, autostripes, and jacquard fabrics.
+                    Within our facility, we specialize in the production of an extensive range of fabrics including
+                    single, spandex, double jersey, and fleece grey variants. Boasting a substantial capacity of 2500
+                    metric tons per year, our commitment to excellence is unwavering. To guarantee top-notch output, we
+                    maintain steadfast collaborations with esteemed, long-standing partners for intricate track designs,
+                    feeder stripes, autostripes, and jacquard fabrics. This synergy enables us to consistently deliver
+                    high-quality textiles that meet and exceed industry standards. From versatile basics to intricate
+                    patterns, our facility stands as a testament to innovation and collaboration, offering a diverse
+                    array of fabric options to cater to a wide spectrum of textile needs.
                   </p>
                 </div>
               </li>
@@ -199,9 +209,16 @@
                     <img src="assets/img/infra/processing-mill.jpg" class="img-fluid" alt="Processing Mill">
                   </div>
                   <p>
-                    3500 tons/year finished fabrics. Turkey-made DMS Dilmenler machinery for dyeing, drying, stentering,
-                    and compacting. Vessels 25-2000 kg, high/low-temp capabilities. Datacolor's Match Textile for
-                    accurate, speedy recipe calculation. Superior results!
+                    With an impressive annual capacity of 3500 tons of finished fabrics, our facility stands as a
+                    paragon of textile production. Powered by cutting-edge Turkey-made DMS Dilmenler machinery,
+                    encompassing dyeing, drying, stentering, and compacting processes, we ensure precision at every
+                    stage. Our machinery, including vessels ranging from 25 to 2000 kg, boasts versatile high and
+                    low-temperature capabilities, enabling us to handle a diverse range of fabric types. Employing
+                    Datacolor's Match Textile technology, we calculate recipes with unmatched accuracy and speed,
+                    further elevating our efficiency. The culmination of these advanced processes and technologies
+                    results in superior fabric outcomes that consistently meet the highest standards. From production to
+                    finishing, our facility is dedicated to delivering excellence, setting new benchmarks in the world
+                    of textile manufacturing.
                   </p>
                 </div>
               </li>
@@ -215,9 +232,15 @@
                     <img src="assets/img/infra/printing.jpg" class="img-fluid" alt="Printing">
                   </div>
                   <p>
-                    SEDEX approved printing. 20k-30k units/day. Conventional, manual, MHM Automatic (14-16 colors).
-                    In-house design team for fast developments. Top-notch quality, efficient production, reliable
-                    support. Join us for innovation and creativity.
+                    Our SEDEX approved printing facility stands as a beacon of responsible production, capable of
+                    delivering 20,000 to 30,000 units per day. Equipped with a versatile range of printing options,
+                    including conventional, manual, and MHM Automatic (14-16 colors), we offer unparalleled flexibility
+                    to cater to diverse requirements. Supported by an in-house design team, we facilitate rapid
+                    development, ensuring timely realization of creative concepts. With an unyielding commitment to
+                    top-notch quality and efficient production, we take pride in providing reliable support to bring
+                    visions to life. Join us in embracing innovation and creativity as we embark on a journey of
+                    transforming ideas into tangible, high-quality printed products. Together, we can redefine
+                    possibilities in the realm of printing, setting new standards and inspiring new horizons.
                   </p>
                 </div>
               </li>
@@ -231,26 +254,43 @@
                     <img src="assets/img/infra/embroidery.jpg" class="img-fluid" alt="Embroidery">
                   </div>
                   <p>
-                    Barudan's Japanese machines offer precise embroidery. 15k units/day production capacity. Trust us
-                    for quality sequence embroidery, stone works, stud work, and embellishments. Elevate your brand now!
+                    Experience the epitome of precision in embroidery with Barudan's renowned Japanese machines. With a
+                    formidable production capacity of 15,000 units per day, our facility is your trusted partner for
+                    impeccable sequence embroidery, intricate stone works, captivating stud designs, and exquisite
+                    embellishments. The legacy of Barudan machines ensures every stitch is a masterpiece, radiating
+                    finesse and sophistication. Entrust us with your vision, and witness the transformation of fabric
+                    into a canvas of artistry. Elevate your brand to new heights as we infuse each piece with an aura of
+                    luxury and individuality. At the intersection of innovation and tradition, our commitment to quality
+                    craftsmanship paves the way for a partnership that redefines excellence in the realm of embroidery.
+                    Your brand's journey towards distinction begins with us – let's embroider the future together.
                   </p>
                 </div>
               </li>
               <hr>
 
-              <!-- <li>
-                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed"> TODO <i
+              <li>
+                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-6" class="collapsed"> GARMENTING <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
-                <div id="accordion-list-5" class="collapse" data-bs-parent="#accordion-list1">
+                <div id="accordion-list-6" class="collapse" data-bs-parent="#accordion-list1">
                   <div class="d-flex justify-content-center">
-                    <img src="assets/img/infra/embroidery.jpg" class="img-fluid" alt="TODO">
+                    <img src="assets/img/infra/garmenting.jpg" class="img-fluid" alt="Garmenting">
                   </div>
                   <p>
-                    TODO
+                    Embark on a transformative garmenting journey with Remmy Textiles Pollachi. Our state-of-the-art
+                    facility is a testament to innovation and craftsmanship, offering a dynamic range of garmenting
+                    solutions that embody quality and style. With meticulous attention to detail, we specialize in
+                    crafting garments that seamlessly merge comfort, functionality, and fashion. From cutting-edge
+                    designs to precision stitching, our skilled team ensures each garment reflects the epitome of
+                    excellence. Leveraging cutting-edge technology and a commitment to sustainable practices, Remmy
+                    Textiles Pollachi delivers garments that resonate with modern sensibilities while honoring
+                    traditional craftsmanship. With a production process rooted in efficiency and creativity, we invite
+                    you to experience a new dimension of garmenting where every piece tells a unique story of meticulous
+                    artistry. Join us in shaping the future of fashion through Remmy Textiles Pollachi's unrivaled
+                    garmenting expertise.
                   </p>
                 </div>
               </li>
-              <hr> -->
+              <hr>
 
             </ul>
           </div>
@@ -373,37 +413,44 @@
           <div class="accordion-list" id="accordion-list2">
             <ul>
               <li>
-                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-6"> SOPs <i
+                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-7"> SOP <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
-                <div id="accordion-list-6" class="collapse show" data-bs-parent="#accordion-list2">
+                <div id="accordion-list-7" class="collapse show" data-bs-parent="#accordion-list2">
                   <p>
-                    We follow Kanban-based Progressive Bundle System for JIT and Lean Manufacturing. This visual
-                    inventory tool controls production, moves inventory efficiently, and prevents stockpile by
-                    restocking only when reserves are low.
+                    We follow Kanban Based Progressive Bundle System
+                    to control production as part of Just In Time (JIT) and
+                    Lean Manufacturing System which acts as a tool for an
+                    inventory organisational structure that uses visual cues to
+                    move inventory through various stages of the
+                    manufacturing process and aims to prevent inventory pileup
+                    by initiating production only to restock empty reserves.
                   </p>
                 </div>
               </li>
               <hr>
 
               <li>
-                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-7" class="collapsed"> QUALITY ASSURANCE <i
+                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-8" class="collapsed"> QUALITY ASSURANCE <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
-                <div id="accordion-list-7" class="collapse" data-bs-parent="#accordion-list2">
+                <div id="accordion-list-8" class="collapse" data-bs-parent="#accordion-list2">
                   <div class="d-flex justify-content-center">
                     <img src="assets/img/infra/quality-assurance.jpg" class="img-fluid" alt="Quality Assurance">
                   </div>
                   <p>
-                    Our well-organized Quality Assurance team conducts continuous online checks from incoming fabric to
-                    finished garments, utilizing the latest technologies. This ensures flawless garment quality.
+                    We have got an well-organized Quality Assurance team
+                    which looks in to the quality management through
+                    continuous online checks from incoming fabric to
+                    finished garments using the latest quality assurance
+                    technologies which ensures the garment to be flawless.
                   </p>
                 </div>
               </li>
               <hr>
 
               <li>
-                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-8" class="collapsed"> TESTING CAPABILITY <i
+                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-9" class="collapsed"> TESTING CAPABILITY <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
-                <div id="accordion-list-8" class="collapse" data-bs-parent="#accordion-list2">
+                <div id="accordion-list-9" class="collapse" data-bs-parent="#accordion-list2">
                   <div class="d-flex justify-content-center">
                     <img src="assets/img/infra/testing-capability.jpg" class="img-fluid" alt="Testing Capability">
                   </div>
@@ -418,9 +465,9 @@
               <hr>
 
               <li>
-                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-9" class="collapsed"> SUSTAINABILITY <i
+                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-10" class="collapsed"> SUSTAINABILITY <i
                     class="bx bx-plus icon-show"></i><i class="bx bx-minus icon-close"></i></a>
-                <div id="accordion-list-9" class="collapse" data-bs-parent="#accordion-list2">
+                <div id="accordion-list-10" class="collapse" data-bs-parent="#accordion-list2">
                   <div class="d-flex justify-content-center">
                     <img src="assets/img/infra/sustainability.jpg" class="img-fluid" alt="Sustainability">
                   </div>
@@ -486,6 +533,7 @@
               SF N0 321/16A1B TIRUPPUR POLLACHI HIGHWAY <br>
               COIMBATORE TAMIL NADU INDIA - 642202<br>
               MR.PRADEEPKANNAN <br>
+              EXECUTIVE DIRECTOR <br>
               <strong>Phone: </strong><a href="telto:+919842404599">+91 98424 04599</a><br>
               <strong>Email: </strong><a href="mailto:pradeep@remmytextiles.in">pradeep@remmytextiles.in</a><br>
             </p>
@@ -497,6 +545,7 @@
               1100 E ORANGETHORPE AVE 200 F <br>
               ANAHEIM CA 92801 USA<br>
               MR.HARISH <br>
+              MARKETING DIRECTOR <br>
               <strong>Phone: </strong><a href="telto:+13106989111">+1 (310) 6989 111</a><br>
               <strong>Email: </strong><a href="mailto:hareesh@remmytextiles.in">hareesh@remmytextiles.in</a><br>
             </p>
