--- a/index.html
+++ b/index.html
@@ -276,16 +276,16 @@
                     <img src="assets/img/infra/garmenting.jpg" class="img-fluid" alt="Garmenting">
                   </div>
                   <p>
-                    Embark on a transformative garmenting journey with Remmy Textiles Pollachi. Our state-of-the-art
+                    Embark on a transformative garmenting journey with Remmy Textiles. Our state-of-the-art
                     facility is a testament to innovation and craftsmanship, offering a dynamic range of garmenting
                     solutions that embody quality and style. With meticulous attention to detail, we specialize in
                     crafting garments that seamlessly merge comfort, functionality, and fashion. From cutting-edge
                     designs to precision stitching, our skilled team ensures each garment reflects the epitome of
                     excellence. Leveraging cutting-edge technology and a commitment to sustainable practices, Remmy
-                    Textiles Pollachi delivers garments that resonate with modern sensibilities while honoring
+                    Textiles delivers garments that resonate with modern sensibilities while honoring
                     traditional craftsmanship. With a production process rooted in efficiency and creativity, we invite
                     you to experience a new dimension of garmenting where every piece tells a unique story of meticulous
-                    artistry. Join us in shaping the future of fashion through Remmy Textiles Pollachi's unrivaled
+                    artistry. Join us in shaping the future of fashion through Remmy Textiles's unrivaled
                     garmenting expertise.
                   </p>
                 </div>
@@ -547,7 +547,7 @@
               MR.HARISH <br>
               MARKETING DIRECTOR <br>
               <strong>Phone: </strong><a href="telto:+13106989111">+1 (310) 6989 111</a><br>
-              <strong>Email: </strong><a href="mailto:hareesh@remmytextiles.in">hareesh@remmytextiles.in</a><br>
+              <strong>Email: </strong><a href="mailto:harish@remmytextiles.in">harish@remmytextiles.in</a><br>
             </p>
           </div>
 
